# RU-LineArt

./: .gitignore  README.md  联系与后期维护.txt
sketch2rhino/: .gitignore  README.md  README_AI.md  pyproject.toml  tool_manifest.json
sketch2rhino/.github/workflows/: build-windows-desktop.yml
sketch2rhino/configs/: default.yaml  dense_topology.yaml  full-recall-separated-balanced.yaml  full-recall-separated-stable.yaml  full-recall.yaml  handdrawn_smooth.yaml  parallel_detail.yaml  recover-lines-core.yaml  recover-lines.yaml
sketch2rhino/desktop_app/: FOLDER_GUIDE.md  README.md  build_macos.sh  build_windows.ps1  clean_artifacts.sh  create_icon_assets.py  create_icon_assets.sh  main.py  run_local.sh  update_feed.example.json
sketch2rhino/desktop_app/assets/: app_icon.icns
sketch2rhino/scripts/: run_demo.sh  run_mode_baseline_images.sh  smoke_test.sh
sketch2rhino/src/sketch2rhino/: __init__.py  api_server.py  brand.py  cli.py  config.py  discovery.py  pipeline.py  types.py
sketch2rhino/src/sketch2rhino.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sketch2rhino/src/sketch2rhino/debug/: artifacts.py  overlays.py
sketch2rhino/src/sketch2rhino/export/: __init__.py  rhino3dm_writer.py
sketch2rhino/src/sketch2rhino/fit/: __init__.py  nurbs_fit.py  segment_split.py  (+2 more)
sketch2rhino/tests/: test_api_server.py  test_discovery.py  test_export_3dm.py  test_export_version.py  test_geometry_mode.py  test_graph_path.py  test_nurbs_fit.py  test_pipeline_filters.py  test_preprocess.py  test_segment_split.py  test_skeleton.py  test_stabilize.py
(+7 files in other folders)
